--- a/classwork/Resaurant/styles/styles.css
+++ b/classwork/Resaurant/styles/styles.css
@@ -4,6 +4,10 @@ Date created: 30/11/2020
 Date last modified: 30/11/2020
 */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     font-family: helvetica, arial;
     color: #0d1f2d;
@@ -15,12 +19,14 @@ body {
 
 
 h1 {
-    font-family: courier, helvetica, arial;
-    font-size: 2.5em;
+
+font-family: "Brush Script MT", Georgia, serif;
+font-size: 5em;
 }
 
 h2 {
-    font-size: 1.3em;
+  font-family: courier, helvetica, arial;
+  font-size: 2em;
 }
 
 h3 {
@@ -34,30 +40,32 @@ h4 {
     padding-top: 30px;
 }
 
+p{
+  font-family: Arial, Helvetica, sans-serif
+}
+
 nav {
   padding-top: 12px;
   padding-bottom: 12px;
   margin-bottom: 10px;
-  padding-left:5%;
+  padding-left:8%;
   color:white;
   position:fixed;
   top: 530px;
-  z-index: 1;
+  z-index: 5;
 }
 
 nav .btn {
     font-size: 30px;
     margin-right:20px;
+    width: 25%;
+    max-width: 130px;
 }
 
 nav .btn:hover:before{
     font-size: 20px;
     font-weight: normal;
 }
-
-#home{width: 130px;}
-#menu{width: 130px;}
-#contact{width: 130px;}
 
 #home:hover:before {content:"Home"}
 #menu:hover:before {content:"Menu"}
@@ -75,6 +83,7 @@ nav .btn:visited{
 .wrapper {
   height: 100vh;
   overflow-x: hidden;
+  overflow-y: auto;
   perspective: 2px;
 }
 .section {
@@ -84,6 +93,7 @@ nav .btn:visited{
   align-items: center;
   justify-content: center;
   color: white;
+  overflow: hidden;
 }
 
 .parallax::after {
@@ -98,6 +108,9 @@ nav .btn:visited{
   z-index: -1;
   height: 200%;
   width: 110%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 25% center;
 }
 
 
@@ -107,6 +120,10 @@ nav .btn:visited{
 
 .bg2::after {
   background-image: url('../images/kitchen.jpg');
+}
+
+.bg3::after {
+  background-image: url('../images/floor.jpg');
 }
 
 .darken-pseudo, .darken-pseudo2{
@@ -131,12 +148,11 @@ nav .btn:visited{
   background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100%);
 }
 
-.darken-with-text h1, .darken-with-text h2, .darken-with-text a, .darken-with-text p {
+.darken-with-text h1, .darken-with-text h2, .darken-with-text a, .darken-with-text p, .darken-with-text h3 {
   margin: 0;
-  font-size: 2em;
   color: white;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 .fill {
@@ -145,7 +161,7 @@ nav .btn:visited{
 }
 
 .sticky {
-  z-index: 1;
+  z-index: 5;
   height:70px;
   background-color: black;
   width:103.9%;
@@ -180,6 +196,20 @@ nav .btn:visited{
   background-size: auto 100%;
   height:100px;
   bottom: 20px;
+}
+
+.scene .cloud1 {
+  background: url(../images/cloud1.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: 30px;
+}
+
+.scene .cloud2 {
+  background: url(../images/cloud2.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: 20px;
 }
 
 .scene .wave {
@@ -226,8 +256,165 @@ nav .btn:visited{
   font-size: 100px;
   left:40%;
   padding-left: 50px;
+  color:black;
 }
 
 .scene:hover .pin {
+  color:red;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+}
+
+.small {
+    font-size: 25px;
+    width: 30%;
+    min-width: 250px;
+}
+
+.numberCircle {
+    width: 80px;
+    line-height: 80px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 50px;
+    border: 2px solid black;
+    background-color: black;
+}
+
+.circle1 {
+  color: pink;
+}
+
+.circle2 {
+  color: red;
+}
+
+.circle3 {
+  color: purple;
+}
+
+.circle4 {
+  color: yellow;
+}
+
+.rotate {
+  writing-mode: vertical-rl;
+  position: relative;
+  left: -60px;
+  top: 0;
+  font-size: 60px;
+  font-weight: 800;
+  color: black;
+  text-align: center;
+}
+
+.carousel-item a{
+  color: black;
+  font-size: 20px;
+}
+
+.carousel-item:hover a{
+  font-style: underline;
   color:black;
+}
+
+.carousel-indicators .colour {
+  background-color: grey;
+}
+
+.carousel-indicators .active {
+  background-color:black;
+}
+
+.fa-star {
+  color: yellow;
+}
+
+.fix_bottom {
+  position: absolute ;
+  bottom:0;
+  margin-left: 10%;
+  margin-bottom: 20px;
+}
+
+.howto {
+  position:fixed;
+  z-index:2;
+}
+
+#howto1 {
+  padding-left:10%;
+  top:1620px;
+}
+
+#howto2 {
+  margin-left:20%;
+  top:2220px;
+}
+
+#howto3 {
+  margin-left:30%;
+  top:2820px;
+}
+
+#howto4 {
+  margin-left:40%;
+  top:3420px;
+  z-index: 0;
+}
+
+.column {
+  height:800px;
+  width:10%;
+  min-width:100px;
+  padding-left:10px;
+}
+
+.hcentre {
+  width:50%;
+  margin:0;
+}
+
+#howtoback1 {
+  background-color: pink;
+  z-index: 1;
+}
+
+#howtoback2 {
+  height:2200px;
+  width: 90%;
+  background-color: red;
+  margin-left:20%;
+  z-index: 2;
+}
+
+#howtoback3 {
+  height:1600px;
+  width: 80%;
+  background-color: purple;
+  margin-left:30%;
+  z-index: 3;
+}
+
+#howtoback4 {
+  height:1000px;
+  width: 70%;
+  background-color: yellow;
+  margin-left:40%;
+  z-index: 4;
+}
+
+.howtoback {
+  position:absolute;
+  bottom: 0;
+  height: 100%;
+  width:100%;
 }
