--- a/classwork/Resaurant/styles/styles.css
+++ b/classwork/Resaurant/styles/styles.css
@@ -23,7 +23,7 @@ font-size: 5em;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 30px;
 }
 
 h3 {
@@ -31,8 +31,12 @@ h3 {
     font-weight: bold;
 }
 
+a {
+  font-weight: bold;
+}
+
 h4 {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: bold;
     padding-top: 30px;
 }
