--- a/classwork/Resaurant/styles/contact_form.css
+++ b/classwork/Resaurant/styles/contact_form.css
@@ -5,6 +5,10 @@
   Most recent revision: 10/01/2021
 */
 
+/*
+  These styles are just for the contact us page, but make the html document neater
+*/
+
 label {
   display: inline-block;
   text-align: right;
@@ -24,11 +28,14 @@ form
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    width:80%;
 }
 
 .form {
   text-align:center;
-  background-color: #F38B24;
+  background-color: #D724F3;
   padding-top:20px;
   padding-bottom: 20px;
 }
