--- a/classwork/Resaurant/styles/home.css
+++ b/classwork/Resaurant/styles/home.css
@@ -5,6 +5,10 @@
   Most recent revision: 10/01/2021
 */
 
+/*
+  These styles are just for the home page, but make the html document neater
+*/
+
 .news {
   height: 400px;
   background-color: lightblue;
@@ -48,6 +52,34 @@
   background-size: auto 100%;
   height:100px;
   top: 20px;
+}
+
+.scene .cloud3 {
+  background: url(../images/cloud3.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: 10px;
+}
+
+.scene .cloud4 {
+  background: url(../images/cloud4.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: 50px;
+}
+
+.scene .cloud5 {
+  background: url(../images/cloud5.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: -10px;
+}
+
+.scene .cloud6 {
+  background: url(../images/cloud6.png) no-repeat;
+  background-size: auto 100%;
+  height:100px;
+  top: -20px;
 }
 
 .scene .wave {
