--- a/classwork/Resaurant/styles/menu.css
+++ b/classwork/Resaurant/styles/menu.css
@@ -5,6 +5,10 @@
   Most recent revision: 10/01/2021
 */
 
+/*
+  These styles are just for the menu page, but make the html document neater
+*/
+
 .menu-heading {
   padding-left:10%;
   padding-right:10%;
@@ -18,6 +22,26 @@
   padding-top:10px;
   padding-bottom:10px;
 }
+
+.menu-row {
+  margin-bottom:5px;
+}
+
+.food {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.desc {
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.price {
+  font-weight: 400;
+  font-size: 17px;
+}
+
 
 .pullbar {
   width:100%;
@@ -69,7 +93,11 @@
 }
 
 hr {
-  background-color: black; height: 3px; border: 0;
+  background-color: black;
+  height: 3px;
+  border:0;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .menu {
